--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,14 @@
         </div>
         <div class="header-top">
             <div class="container clearfix">
-                <div class="header-top_logo">
-                    <img src="../img/logo.svg" alt="logo">
-                    <span class="header-top_logo-text">Beauty</span>
+                <div class="header-top_logo"> 
+                   <a href="#"><img src="../img/logo.svg"alt="logo">
+                   <span class="header-top_logo-text">Beauty</a></span>
                 </div>
                 <div class="header-top_contacts">
-                    <a href="#"><span class="header-top_tel">38 (044) 123-45-67</span></a>
+                    <span>
+                    <a href="tel: 380441234567"class="header-top_tel">38 (044) 123-45-67</a>
+                    </span>
                     <button class="btn btn--outline-pink">Обратный звонок</button>
                 </div>
             </div>
@@ -196,7 +198,9 @@
                 <a href="https://vk.com/"><img src="../img/vk.png"class="vk" alt="vk"></a>
                 <a href="https://www.facebook.com/"><img src="../img/facebook.png" class="facebook" alt="facebook"></a>
                 <a href="https://www.instagram.com/"><img src="../img/instagram.png"class="instagram" alt="instagram"></a>
-                <a href="#"><h6 class="phone">38 (044) 123-45-67</h6></a>
+                <span>
+                    <a href="tel: 380441234567"class="phone">38 (044) 123-45-67</a>
+                </span>
                 <button class="btn_f">Обратный звонок</button>
             </div>
             <div class="gray-bg_1">
