--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header-top">
             <div class="container clearfix">
                 <div class="header-top_logo"> 
-                   <a href="#"><img src="../img/logo.svg"alt="logo">
+                   <a href="#"><img src="img/logo.svg"alt="logo">
                    <span class="header-top_logo-text">Beauty</a></span>
                 </div>
                 <div class="header-top_contacts">
