--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                 <h2 class="wrap-products_title">Специальные предложения</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
