--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
            </div>
            <div class="container_2">
            <ul>
-                <a href="#"><li class="impuls-img_1"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_2"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_3"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_4"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_5"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_6"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_7"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_8"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_9"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_10"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_11"><img src="../img/impuls.png" alt="impuls-img"></li></a>
-                <a href="#"><li class="impuls-img_12"><img src="../img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_1"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_2"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_3"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_4"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_5"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_6"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_7"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_8"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_9"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_10"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_11"><img src="img/impuls.png" alt="impuls-img"></li></a>
+                <a href="#"><li class="impuls-img_12"><img src="img/impuls.png" alt="impuls-img"></li></a>
            </ul>
            </div>
            <section class="container">
@@ -125,25 +125,25 @@
                 <h2 class="wrap-products_title">Вы недавно смотрели</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
                     </div>
                     <div class="product">
-                        <img src="../img/product.jpg" alt="product">
+                        <img src="img/product.jpg" alt="product">
                         <p class="product-text">Парикмахерское кресло «Норм» гидравлическое</p>
                         <p class="product-price">9 900 UAH</p>
                         <button class="btn btn--small btn--pink">Купить</button>
@@ -194,10 +194,10 @@
         </div>
             <div><hr></div>
             <div class="container_4">
-                <a href="https://www.youtube.com/"><img src="../img/youtube.png" class="youtube" alt="youtube"></a>
+                <a href="https://www.youtube.com/"><img src="img/youtube.png" class="youtube" alt="youtube"></a>
                 <a href="https://vk.com/"><img src="../img/vk.png"class="vk" alt="vk"></a>
-                <a href="https://www.facebook.com/"><img src="../img/facebook.png" class="facebook" alt="facebook"></a>
-                <a href="https://www.instagram.com/"><img src="../img/instagram.png"class="instagram" alt="instagram"></a>
+                <a href="https://www.facebook.com/"><img src="img/facebook.png" class="facebook" alt="facebook"></a>
+                <a href="https://www.instagram.com/"><img src="img/instagram.png"class="instagram" alt="instagram"></a>
                 <span>
                     <a href="tel: 380441234567"class="phone">38 (044) 123-45-67</a>
                 </span>
