--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div><hr></div>
             <div class="container_4">
                 <a href="https://www.youtube.com/"><img src="img/youtube.png" class="youtube" alt="youtube"></a>
-                <a href="https://vk.com/"><img src="../img/vk.png"class="vk" alt="vk"></a>
+                <a href="https://vk.com/"><img src="img/vk.png"class="vk" alt="vk"></a>
                 <a href="https://www.facebook.com/"><img src="img/facebook.png" class="facebook" alt="facebook"></a>
                 <a href="https://www.instagram.com/"><img src="img/instagram.png"class="instagram" alt="instagram"></a>
                 <span>
