--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                    <h3>Получайте бонусы и подарки</h3>
                    <p class="prize_1">Каждый месяц разыгрываем 10 000 грн для наших клиентов</p>
                    <input type="email" class="email"placeholder="Введите e-mail">
-                   <img src="../img/envelope.png"class="image_1" alt="product">
+                   <img src="img/envelope.png"class="image_1" alt="product">
                </div>
                <div class="card_2">
                    <h3>Заходите к нам</h3>
                    <p class="prize_2">Более 300 магазинов по всей Украине</p>
                    <button class="button">Карта магазинов</button>
-                   <img src="../img/bus.png" class="image_2" alt="bus"> 
+                   <img src="img/bus.png" class="image_2" alt="bus"> 
                </div>
            </div>
            <div class="container_2">
